--- a/default.conf
+++ b/default.conf
@@ -6,8 +6,8 @@ server {
     listen      443 ssl;
 
     ssl_stapling off;
-    ssl_certificate /etc/nginx/ssl/app/cert.pem;
-    ssl_certificate_key /etc/nginx/ssl/app/key.pem;
+    ssl_certificate /etc/nginx/ssl/cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/key.pem;
 
     return      403;
 }
