修改默认使用"fullchain.pem",避免"错误： 服务器缺少中间证书"

--- a/default.conf
+++ b/default.conf
@@ -6,7 +6,7 @@ server {
     listen      443 ssl;
 
     ssl_stapling off;
-    ssl_certificate /etc/nginx/ssl/cert.pem;
+    ssl_certificate /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/key.pem;
 
     return      403;
